// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome Render Welcome component with categories empty 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-paddingTop-1hy97zq"
>
  <div
    aria-disabled={true}
    className="css-view-1dbjc4n r-position-u8s1d r-right-r19jdo r-top-1ej1qmr r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    disabled={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <div
      className="css-text-901oao r-color-1dnsj32 r-fontSize-1i10wst r-fontWeight-1kfrs79 r-opacity-17tb59b"
      dir="auto"
    >
      Skip
    </div>
  </div>
  <div
    className="css-text-901oao r-fontSize-adyw6z r-fontWeight-majxgm r-textAlign-q4m81j"
    dir="auto"
  >
    Select 4 or more interests
  </div>
  <div
    className="css-text-901oao r-fontSize-ubezar r-marginTop-1g94qm0 r-textAlign-q4m81j"
    dir="auto"
  >
    Select below to personalize the app with your tastes
  </div>
  <div
    className="css-text-901oao r-color-kaiwep r-fontSize-1i10wst r-fontWeight-1kfrs79 r-marginTop-19h5ruw r-textAlign-q4m81j"
    dir="auto"
  >
    I have a special diet
  </div>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1g6456j r-height-hdaws3 r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-marginTop-1x0uki6 r-width-1glkqn6"
  />
  <div
    className="css-view-1dbjc4n r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-width-l0gwng"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "center",
          "WebkitJustifyContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(66,165,245,1.00)",
          "borderBottomColor": "rgba(0,0,0,0.00)",
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,0,0,0.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,0,0,0.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,0,0,0.00)",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "justifyContent": "center",
          "minWidth": "64px",
          "msFlexAlign": "center",
          "msFlexPack": "center",
          "paddingBottom": "5px",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
            "overflowX": "hidden",
            "overflowY": "hidden",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "direction": "ltr",
                  "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "textAlign": "left",
                }
              }
            >
              Save Category
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-marginLeft-1jj8364 r-marginRight-lchren r-maxWidth-z7pwl0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1h0z5md"
      style={
        Object {
          "WebkitBoxFlex": 0,
          "WebkitFlexGrow": 0,
          "flexGrow": 0,
          "msFlexPositive": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Welcome Render Welcome component with data 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-paddingTop-1hy97zq"
>
  <div
    className="css-view-1dbjc4n r-cursor-1loqt21 r-position-u8s1d r-right-r19jdo r-top-1ej1qmr r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    data-focusable={true}
    disabled={false}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    tabIndex="0"
  >
    <div
      className="css-text-901oao r-color-1dnsj32 r-fontSize-1i10wst r-fontWeight-1kfrs79"
      dir="auto"
    >
      Skip
    </div>
  </div>
  <div
    className="css-text-901oao r-fontSize-adyw6z r-fontWeight-majxgm r-textAlign-q4m81j"
    dir="auto"
  >
    Select 4 or more interests
  </div>
  <div
    className="css-text-901oao r-fontSize-ubezar r-marginTop-1g94qm0 r-textAlign-q4m81j"
    dir="auto"
  >
    Select below to personalize the app with your tastes
  </div>
  <div
    className="css-text-901oao r-color-kaiwep r-fontSize-1i10wst r-fontWeight-1kfrs79 r-marginTop-19h5ruw r-textAlign-q4m81j"
    dir="auto"
  >
    I have a special diet
  </div>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1g6456j r-height-hdaws3 r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-marginTop-1x0uki6 r-width-1glkqn6"
  />
  <div
    className="css-view-1dbjc4n r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-width-l0gwng"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
      style={
        Object {
          "backgroundColor": "rgba(66,165,245,1.00)",
          "borderBottomColor": "rgba(0,0,0,0.00)",
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,0,0,0.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,0,0,0.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,0,0,0.00)",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "minWidth": "64px",
          "paddingBottom": "5px",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-overflow-1udh08x r-touchAction-1otgn73 r-userSelect-lrvibr"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "direction": "ltr",
                  "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "textAlign": "left",
                }
              }
            >
              Save Category
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-marginLeft-1jj8364 r-marginRight-lchren r-maxWidth-z7pwl0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1h0z5md"
      style={
        Object {
          "WebkitBoxFlex": 0,
          "WebkitFlexGrow": 0,
          "flexGrow": 0,
          "msFlexPositive": 0,
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Fish
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Pizza
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Cake
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Deserts
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Salad
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Kids
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Meat
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          />
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with error 1`] = `
<div
  aria-live="polite"
  className="css-view-1dbjc4n r-position-u8s1d"
  style={
    Object {
      "bottom": "0px",
      "left": "0px",
      "right": "0px",
      "top": "0px",
    }
  }
>
  <div
    className="css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-touchAction-1otgn73"
    data-focusable={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.50)",
        "opacity": 1,
      }
    }
    tabIndex="0"
  />
  <div
    className="css-view-1dbjc4n r-bottom-1p0dtai r-justifyContent-1777fci r-left-1d2f490 r-pointerEvents-12vffkv r-position-u8s1d r-right-zchlnj r-top-ipm5af"
  >
    <div
      className="css-view-1dbjc4n r-justifyContent-1h0z5md"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,1.00)",
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "boxShadow": "0px 23px 24px rgba(0,0,0,0.24)",
          "marginBottom": "0px",
          "marginLeft": "26px",
          "marginRight": "26px",
          "marginTop": "0px",
          "opacity": 1,
          "top": "150px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-paddingBottom-qn3fzs r-paddingHorizontal-1guathk"
        style={
          Object {
            "paddingTop": "24px",
          }
        }
      >
        <div
          className="css-text-901oao r-color-1vs7qoz r-fontSize-1i10wst r-fontStyle-36ujnk"
          dir="auto"
        >
          Error!
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-17s6mgv r-padding-edyy15"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(66,165,245,1.00)",
              "borderBottomColor": "rgba(0,0,0,0.00)",
              "borderBottomLeftRadius": "4px",
              "borderBottomRightRadius": "4px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0px",
              "borderLeftColor": "rgba(0,0,0,0.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0px",
              "borderRightColor": "rgba(0,0,0,0.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "0px",
              "borderTopColor": "rgba(0,0,0,0.00)",
              "borderTopLeftRadius": "4px",
              "borderTopRightRadius": "4px",
              "borderTopStyle": "solid",
              "borderTopWidth": "0px",
              "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginRight": "10px",
              "minWidth": "64px",
              "paddingBottom": "5px",
              "paddingLeft": "5px",
              "paddingRight": "5px",
              "paddingTop": "5px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-touchAction-1otgn73 r-userSelect-lrvibr"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "borderBottomLeftRadius": "4px",
                "borderBottomRightRadius": "4px",
                "borderTopLeftRadius": "4px",
                "borderTopRightRadius": "4px",
                "overflowX": "hidden",
                "overflowY": "hidden",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
            >
              <div
                className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(0,0,0,1.00)",
                    "direction": "ltr",
                    "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  }
                }
              >
                <span
                  className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
                  dir="auto"
                  style={
                    Object {
                      "direction": "ltr",
                      "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                      "textAlign": "left",
                    }
                  }
                >
                  Done
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with loading true 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-justifyContent-1777fci"
>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-z80fyv r-width-19wmn03"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#c5c5c5",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#c5c5c5",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with loading true 2`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-justifyContent-1777fci"
>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-1r8g8re r-width-1acpoxo"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#c5c5c5",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#c5c5c5",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Welcome Render Welcome component with missingCategory 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-paddingTop-1hy97zq"
>
  <div
    aria-disabled={true}
    className="css-view-1dbjc4n r-position-u8s1d r-right-r19jdo r-top-1ej1qmr r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
    disabled={true}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <div
      className="css-text-901oao r-color-1dnsj32 r-fontSize-1i10wst r-fontWeight-1kfrs79 r-opacity-17tb59b"
      dir="auto"
    >
      Skip
    </div>
  </div>
  <div
    className="css-text-901oao r-fontSize-adyw6z r-fontWeight-majxgm r-textAlign-q4m81j"
    dir="auto"
  >
    Select 4 or more interests
  </div>
  <div
    className="css-text-901oao r-fontSize-ubezar r-marginTop-1g94qm0 r-textAlign-q4m81j"
    dir="auto"
  >
    Select below to personalize the app with your tastes
  </div>
  <div
    className="css-text-901oao r-color-kaiwep r-fontSize-1i10wst r-fontWeight-1kfrs79 r-marginTop-19h5ruw r-textAlign-q4m81j"
    dir="auto"
  >
    I have a special diet
  </div>
  <div
    className="css-view-1dbjc4n r-backgroundColor-1g6456j r-height-hdaws3 r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-marginTop-1x0uki6 r-width-1glkqn6"
  />
  <div
    className="css-view-1dbjc4n r-marginBottom-117bsoe r-marginLeft-1jj8364 r-marginRight-lchren r-width-l0gwng"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
      style={
        Object {
          "backgroundColor": "rgba(66,165,245,1.00)",
          "borderBottomColor": "rgba(0,0,0,0.00)",
          "borderBottomLeftRadius": "4px",
          "borderBottomRightRadius": "4px",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftColor": "rgba(0,0,0,0.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightColor": "rgba(0,0,0,0.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopColor": "rgba(0,0,0,0.00)",
          "borderTopLeftRadius": "4px",
          "borderTopRightRadius": "4px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxShadow": "0px 0.75px 1.5px rgba(0,0,0,0.24)",
          "minWidth": "64px",
          "paddingBottom": "5px",
          "paddingLeft": "5px",
          "paddingRight": "5px",
          "paddingTop": "5px",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n r-backgroundColor-1niwhzg r-cursor-1loqt21 r-overflow-1udh08x r-touchAction-1otgn73 r-userSelect-lrvibr"
        data-focusable={true}
        disabled={false}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        role="button"
        style={
          Object {
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz r-letterSpacing-ud0q2t r-marginHorizontal-1ydw1k6 r-marginVertical-712mwr r-textAlign-q4m81j"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,0,0,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Medium, Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406 r-color-jwli3a r-fontWeight-1kfrs79 r-textTransform-tsynxw"
              dir="auto"
              style={
                Object {
                  "direction": "ltr",
                  "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "textAlign": "left",
                }
              }
            >
              Save Category
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n r-marginLeft-1jj8364 r-marginRight-lchren r-maxWidth-z7pwl0"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-obd0qt r-display-6koalj r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1h0z5md"
      style={
        Object {
          "WebkitBoxFlex": 0,
          "WebkitFlexGrow": 0,
          "flexGrow": 0,
          "msFlexPositive": 0,
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Pizza
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Cake
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Deserts
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Salad
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Kids
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          >
            Meat
          </div>
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-margin-1un5n4g r-position-bnwqim"
        style={
          Object {
            "height": "0px",
            "width": "0px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          data-focusable={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="https://realhousemoms.com/wp-content/uploads/Honey-Butter-Chicken-IG.jpg"
            />
          </div>
          <div
            className="css-text-901oao r-color-1rqp49e r-fontSize-ubezar r-fontWeight-vw2c0b r-left-1n430bm r-position-u8s1d r-top-1yxedwg r-zIndex-136ojw6"
            dir="auto"
          />
          <div
            className="css-view-1dbjc4n r-backgroundColor-kemksi r-opacity-17tb59b r-position-u8s1d r-zIndex-184en5c"
            style={
              Object {
                "height": "0px",
                "width": "0px",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
